src/pages/main.css
/*
 * File: main.css
 * Project: wardrobe
 * Created Date: 2025-09-08 16:08:20
 * Author: 3urobeat
 *
 * Last Modified: 2026-03-26 17:57:20
 * Modified By: 3urobeat
 *
 * Copyright (c) 2025 - 2026 3urobeat <https://github.com/3urobeat>
 *
 * This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
 * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
 * You should have received a copy of the GNU Affero General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.
 */


@import "tailwindcss";


/* Apply global background */
@layer base {
    body {
        @apply bg-bg-light dark:bg-bg-dark transition-colors;
    }

    /* Hides no JS warning */
    html.js #js-disabled-banner {
        display: none;
    }

    /* Loading Animation from https://css-loaders.com/spinner/ */
    .loader {
        width: 50px;
        padding: 8px;
        aspect-ratio: 1;
        border-radius: 50%;
        background: var(--color-wardrobe-blue);
        --_m:
            conic-gradient(#0000 10%,#000),
            linear-gradient(#000 0 0) content-box;
        -webkit-mask: var(--_m);
                mask: var(--_m);
        -webkit-mask-composite: source-out;
                mask-composite: subtract;
        animation: l3 1s infinite linear;
    }
    @keyframes l3 {to{transform: rotate(1turn)}}
}


/* Colors */
@theme {
    --color-wardrobe-blue: #3e91ff;

    --color-bg-light: #f8f9fa;
    --color-bg-dark: #181a1b;

    --color-bg-input-hover-light: #d9dadc;
    --color-bg-input-hover-dark: #25282a;
    --color-bg-input-light: #e8e9eb;
    --color-bg-input-dark: #202224;

    --color-bg-field-hover-light: #e2e3e5;
    --color-bg-field-hover-dark: #242628;
    --color-bg-field-light: #f2f3f4;
    --color-bg-field-dark: #2a2d2f;

    --color-bg-embed-hover-dark: #26292b;
    --color-bg-embed-light: #d6dce4;
    --color-bg-embed-dark: #242729;

    --color-text-light: #000000;
    --color-text-dark: #e8e6e3;

    --color-text-secondary-dark: #bdbdbd;
    --color-text-secondary-light: #4a5565; /* gray-600 */

    --color-border-primary-light: #585c63; /* TODO: Where is this used? custom-input-primary uses secondary border but custom-input-secondary uses this primary one, bit weird */
    --color-border-primary-dark: #565d5f;

    --color-border-secondary-light: #9198a3;
    --color-border-secondary-dark: #697274;
}

/* Color combinations */
/* TODO: Pre-made combinations of "x-light dark:x-dark" would clean up so much */


/* Dark Mode */
@custom-variant dark (&:where(.dark, .dark *));

@layer base {
    button:not(:disabled),
    [role="button"]:not(:disabled) {
        cursor: pointer;
    }
}


/* Reusable Custom Components.
   Please see tailwindHelper.ts for additional
*/

/* Primary button, used in various places on <button> container. Put Icon and Text inside. */
.custom-button-primary {
    @apply flex items-center justify-center h-8 py-1 px-3 rounded-md shadow-md cursor-pointer bg-bg-input-light dark:bg-bg-input-dark outline-border-primary-light dark:outline-border-primary-dark outline-2 hover:bg-bg-input-hover-light hover:dark:bg-bg-input-hover-dark hover:transition-all disabled:bg-bg-input-hover-light disabled:dark:bg-bg-input-hover-dark disabled:cursor-not-allowed;
}

/* Small square button without text, used on <button> container. Put Icon inside. */
.custom-button-icon-only {
    @apply p-1 rounded-md shadow-md bg-bg-input-light dark:bg-bg-input-dark outline-border-primary-light dark:outline-border-primary-dark outline-2 hover:bg-bg-input-hover-light hover:dark:bg-bg-input-hover-dark hover:transition-all disabled:bg-bg-input-hover-light disabled:dark:bg-bg-input-hover-dark disabled:cursor-not-allowed;
}

.custom-button-icon-only-secondary {
    @apply p-1 rounded-md shadow-md bg-bg-field-light dark:bg-bg-field-dark outline-border-secondary-light dark:outline-border-secondary-dark outline-2 hover:bg-bg-field-hover-light hover:dark:bg-bg-field-hover-dark hover:transition-all disabled:bg-bg-field-hover-light disabled:dark:dark:bg-bg-field-hover-dark disabled:cursor-not-allowed;
}

/* Primary input, used in various places on <input> or even secondary <button> container */
.custom-input-primary {
    @apply h-8 py-1 px-3 rounded-md shadow-md bg-bg-field-light dark:bg-bg-field-dark outline-2 outline-border-secondary-light dark:outline-border-secondary-dark hover:bg-bg-field-hover-light hover:dark:bg-bg-field-hover-dark hover:transition-all disabled:bg-bg-field-hover-light disabled:dark:bg-bg-field-hover-dark disabled:cursor-not-allowed;
}

/* Duplicates custom-input-primary with different outline, sadly cannot reference component in this component */
.custom-input-secondary {
    @apply h-8 py-1 px-3 rounded-md shadow-md bg-bg-field-light dark:bg-bg-field-dark outline-2 outline-border-primary-light dark:outline-border-primary-dark hover:bg-bg-field-hover-light hover:dark:bg-bg-field-hover-dark hover:transition-all disabled:bg-bg-field-hover-light disabled:dark:bg-bg-field-hover-dark disabled:cursor-not-allowed;
}

/* Primary label to display text */
.custom-label-primary {
    @apply py-1 px-3 rounded-md shadow-md bg-bg-field-light dark:bg-bg-field-dark;
}

.custom-label-secondary {
    @apply py-1 px-3 rounded-md shadow-md bg-bg-input-light dark:bg-bg-input-dark;
}

/* Small square label to display icon without text. Put Icon inside. */
.custom-label-icon-only {
    @apply p-1 rounded-md shadow-md bg-bg-field-light dark:bg-bg-field-dark;
}

/* Application specific labels feature, not HTML labels */
.custom-wardrobe-label {
    @apply text-nowrap rounded-xl shadow-md px-2 text-gray-100 bg-gray-400 dark:bg-gray-600;
}

/* Duplicates custom-wardrobe-label with hovering enabled, sadly cannot reference component in this component */
.custom-wardrobe-label-clickable {
    @apply text-nowrap rounded-xl shadow-md px-2 text-gray-100 bg-gray-400 dark:bg-gray-600 hover:bg-gray-600 dark:hover:bg-gray-400 hover:transition-all;
}

/* Add with conditional class to mark wardrobe label as selected */
.custom-wardrobe-label-selected-outline {
    @apply bg-green-600/60 outline-green-700 dark:outline-green-500 outline-2;
}

/* These two define a custom grid for displaying items with desktop/mobile scaling. See dynamicTailwindHelper for the scaling mapping. */
.custom-items-grid {
    @apply grid gap-x-4 gap-y-6 md:gap-x-6 md:gap-y-10
}
.custom-items-grid-card {
    @apply @container aspect-square md:aspect-auto rounded-2xl shadow-lg select-none bg-bg-input-light dark:bg-bg-input-dark hover:bg-bg-input-hover-light hover:dark:bg-bg-input-hover-dark hover:transition-all
}

